# postgres-kit

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md
.github/workflows/: publish-crate.yml  rust.yml
crates/postgres-kit/: Cargo.toml
crates/postgres-kit/examples/: rpm_pizza_full.rs  rpm_pizza_schema.rs
crates/postgres-kit/src/: client.rs  codegen.rs  ddl.rs  drift.rs  introspect.rs  lib.rs  migrate.rs  safety.rs  spec.rs  spec_codegen.rs  tenant.rs
crates/postgres-kit/src/differ/: ir.rs  lower.rs  mod.rs  renames.rs  statement.rs
crates/postgres-kit/src/differ/diff/: columns.rs  constraints.rs  enums.rs  fks.rs  identity.rs  indexes.rs  mod.rs  order.rs  policies.rs  roles.rs  schemas.rs  sequences.rs  tables.rs  views.rs
crates/postgres-kit/tests/: differ_corpus.rs  integration.rs  rpm_pizza.rs
crates/postgres-kit/tests/corpus/: checks.rs  columns.rs  enums.rs  generated.rs  identity.rs  mod.rs  policy.rs  roles.rs  sequences.rs  tables.rs  views.rs
