[package]
name = "smooai-postgres-kit"
version = "0.0.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "Rust-native declarative Postgres schema toolkit: a PgTableSpec as the single source of truth for CREATE TABLE DDL, diff-based forward-only migrations, drift detection, serde/sqlx row codegen, and a safe-by-construction tenant-scoped sqlx layer."
documentation = "https://docs.rs/smooai-postgres-kit"
repository = "https://github.com/SmooAI/postgres-kit"
homepage = "https://github.com/SmooAI/postgres-kit"
readme = "README.md"
keywords = ["postgres", "schema", "migrations", "sqlx", "multi-tenant"]
categories = ["database", "data-structures"]

# The package is `smooai-postgres-kit` (we're always smooai-scoped), but the
# library imports as `postgres_kit` for ergonomics: `use postgres_kit::...`.
[lib]
name = "postgres_kit"
path = "src/lib.rs"

[features]
# The diff engine (snapshot IR, lowering, DDL statements, rename hints) is the
# always-on core of the kit.
default = ["differ"]
differ = []
# Row-level-security helpers layered on the differ (reserved).
rls = []
# Pull `sqlx` in as a real (optional) dependency. The BYO `PgExecutor` stays the
# default model for DDL/migrate/drift; `sqlx` only powers the typed,
# tenant-scoped query layer (it needs `FromRow` row decoding + bound params,
# which the string-only `PgExecutor` seam can't express).
sqlx = ["dep:sqlx"]
# Tenant-scoped typed query layer (src/tenant.rs). Builds on the `sqlx` feature:
# the typed rows are `sqlx::FromRow`, so enabling tenant enables sqlx.
tenant = ["sqlx"]
# serde/sqlx + TS/Zod row codegen (stub, src/codegen.rs).
codegen = []
# Forward-only `*.sql` migration runner (stub, src/migrate.rs).
migrate = []
# Read-only drift gate against a live schema (stub, src/drift.rs).
drift = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# Optional — only compiled in for the `sqlx` / `tenant` features. The shipped
# default-feature crate stays serde + thiserror only.
sqlx = { version = "0.8", default-features = false, features = [
    "postgres",
    "runtime-tokio",
    "uuid",
], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# Tenant tests model tenant/PK keys as UUIDs (the api-prime shape).
uuid = { version = "1", features = ["v4"] }
